Fix: Message entries overflow horizontally on iOS Safari (#504)
* Fix: Message entries overflow horizontally on iOS Safari

* Add PR ID to CHANGELOG

--- a/resources/css/humhub.mail.scss
+++ b/resources/css/humhub.mail.scss
@@ -106,7 +106,6 @@ $radiusNone: 0;
     background-color: $bgColorDefault;
     border-radius: $radius;
     padding: 10px;
-    max-width: 70%;
 
     pre {
         max-width: 485px;
